fix text spacing and eliminate html selector

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -6,9 +6,6 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
-html {
-  font-size: 62.5%;
-}
 
 * {
   margin: 0;
@@ -82,7 +79,7 @@ body {
   display: block;
   font-size: 20px;
   font-weight: 700;
-  letter-spacing: 15.7px;
+  letter-spacing: 20.2px;
 
   animation: moveInRight 1s ease-out;
   /* 
